--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "@iconify/react": "^4.1.1",
     "@mui/material": "^5.14.10",
     "@mui/styled-engine-sc": "^5.14.10",
+    "@mui/x-date-pickers": "^6.15.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.0",
+    "dayjs": "^1.11.10",
     "express": "^4.18.2",
     "iconify": "^1.4.0",
     "mongodb": "^6.1.0",
