--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "autosuggest-highlight": "^3.3.4",
     "axios": "^1.5.0",
     "dayjs": "^1.11.10",
     "express": "^4.18.2",
@@ -22,6 +23,7 @@
     "passport-google-oauth20": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-places-autocomplete": "^4.0.1",
     "react-helmet-async": "^1.3.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
