--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dayjs": "^1.11.10",
     "express": "^4.18.2",
     "iconify": "^1.4.0",
+    "jwt-decode": "^3.1.2",
     "mongodb": "^6.1.0",
     "passport-google-oauth20": "^2.0.0",
     "react": "^18.2.0",
