--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@react-google-maps/api": "^2.19.2",
     "colors": "^1.4.0",
     "mongoose": "^7.5.2"
   }
