--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@testing-library/user-event": "^13.5.0",
     "autosuggest-highlight": "^3.3.4",
     "axios": "^1.5.0",
+    "bootstrap": "^5.3.2",
     "dayjs": "^1.11.10",
     "express": "^4.18.2",
     "iconify": "^1.4.0",
@@ -24,6 +25,7 @@
     "mongodb": "^6.1.0",
     "passport-google-oauth20": "^2.0.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.0",
     "react-dom": "^18.2.0",
     "react-google-places-autocomplete": "^4.0.1",
     "react-helmet-async": "^1.3.0",
