--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "npm update && node server.js"
+    "dev": "npm update && nodemon server.js"
   },
   "keywords": [],
   "author": "",
