--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mongodb": "^6.1.0",
     "passport-google-oauth20": "^2.0.0",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-bootstrap": "^2.9.0",
     "react-dom": "^18.2.0",
     "react-google-places-autocomplete": "^4.0.1",
