Fixed route selection and waypoints in server

--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@googlemaps/polyline-codec": "^1.0.28",
     "colors": "^1.4.0",
     "mongoose": "^7.5.2"
   }
