--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# Private Constants
+# server/Constants.js
+# src/Constants.js
+
 # dependencies
 server/node_modules
 /node_modules
