--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "@googlemaps/polyline-codec": "^1.0.28",
     "colors": "^1.4.0",
+    "lz-string": "^1.5.0",
     "mongoose": "^7.5.2",
+    "pako": "^2.1.0",
     "polyline": "^0.2.0"
   }
 }
