--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "dayjs": "^1.11.10",
     "express": "^4.18.2",
     "iconify": "^1.4.0",
+    "jsoncomp": "^1.6.1",
     "jwt-decode": "^3.1.2",
     "lz-string": "^1.5.0",
     "mongodb": "^6.1.0",
+    "pako": "^2.1.0",
     "passport-google-oauth20": "^2.0.0",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
