--- a/server/package.json
+++ b/server/package.json
@@ -1,11 +1,11 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "npm update && nodemon server.js"
+    "dev": "npm update && nodemon server.js",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
@@ -13,9 +13,15 @@
   "dependencies": {
     "@googlemaps/polyline-codec": "^1.0.28",
     "colors": "^1.4.0",
+    "express": "^4.18.2",
+    "google-auth-library": "^9.2.0",
+    "googleapis": "^128.0.0",
     "lz-string": "^1.5.0",
     "mongoose": "^7.5.2",
+    "nodemailer": "^6.9.7",
+    "open": "^9.1.0",
     "pako": "^2.1.0",
     "polyline": "^0.2.0"
-  }
+  },
+  "description": ""
 }
